==============================
   FoxBot Version History
==============================

--------------------------------------------------------------------------------
Version 0.800
????-??-202?
Updated by RoboCop
--------------------------------------------------------------------------------

- Added new waypoints:-
	+ botspree
	+ gen_complex
	+ insideout
	+ lbdustbowl
	+ mulch_dm2b1

--------------------------------------------------------------------------------
Version 0.793
September-26-2020
Updated by RoboCop
--------------------------------------------------------------------------------

- Fixed high bots CPU usage and buffer overruns

- Fixed load with non-metamod crashing the game

- Removed some more redundant codes

- Added some Clang compiler fixes and performance fixes

- Spies won't select enemy Scouts, Medics, HWs and Engineers disguises as their speeds and lame default weapons can easily blow their covers

- Repaired some rogue pathwaypoints for 2fort, avanti, cz2, palermo, rock2, sandbowl_r2, shutdown2 and well

- Allowing bots to avoid firing lame weapons like nailguns, laser railguns and dart tranq guns too often

- Limited the bot frame rate movement to 60Hz

- Increased bot job priority for collecting ammo and healing teammates

- Added script for the bots to know how to disable flag room security

- Reduced bot job priority for solders to avoid rocket jumping too often

- Removed excess Conc/Rocket Jump waypoints in dustbowl in awkward areas and due to the lack of conc nades

- Optimised 'foxbot_commander.txt' by removing excess 'strlen' loops

Known bugs:-

>> Soldier bots tend to struggle for rocket jumping in certain areas that can block its way

>> Sniper bots tend to TK when Friendly Fire is on, when interacting with their team's sentries and teleports

>> botdontmove, bot_chat, min_bots, max_bots, bot_bot_balance and bot_team_balance cvars may not be 100% operational
