@@ -132,16 +132,16 @@ const jobList_struct jl[JOB_TYPE_TOTAL] = {
     {PRIORITY_MAXIMUM, "JOB_GET_UNSTUCK"},
     {0, "JOB_ROAM"},
     {400, "JOB_CHAT"},
-    {570, "JOB_REPORT"},
+    {580, "JOB_REPORT"},
     {490, "JOB_PICKUP_ITEM"},
     {510, "JOB_PICKUP_FLAG"},
     {800, "JOB_PUSH_BUTTON"},
     {680, "JOB_USE_TELEPORT"},
     {790, "JOB_MAINTAIN_OBJECT"},
     {770, "JOB_BUILD_SENTRY"},
-    {540, "JOB_BUILD_DISPENSER"},
+    {520, "JOB_BUILD_DISPENSER"},
     {690, "JOB_BUILD_TELEPORT"},
-    {520, "JOB_BUFF_ALLY"},
+    {590, "JOB_BUFF_ALLY"},
     {600, "JOB_ESCORT_ALLY"},
     {480, "JOB_CALL_MEDIC"}, // this should be a higher priority than JOB_GET_HEALTH
     {460, "JOB_GET_HEALTH"},
@@ -159,7 +159,7 @@ const jobList_struct jl[JOB_TYPE_TOTAL] = {
     {720, "JOB_CONCUSSION_JUMP"}, 
     {390, "JOB_DETPACK_WAYPOINT"},
     {430, "JOB_PIPETRAP"},
-    {590, "JOB_INVESTIGATE_AREA"},
+    {600, "JOB_INVESTIGATE_AREA"},
     {640, "JOB_PURSUE_ENEMY"},
     {210, "JOB_PATROL_HOME"},
     {700, "JOB_SPOT_STIMULUS"},
