@@ -14,6 +14,12 @@ Updated by RoboCop
 	+ insideout
 	+ lbdustbowl
 	+ mulch_dm2b1
+	
+- Added more reaction time delay for bots to attack enemies as they were too quick to respond
+	
+- Reduced accuracy for snipers as it was increased by 25% but reduced to 20% based on the bot_skill_1_aim cvar
+	
+- bot_job_think.cpp adjusted for the Medic and Engineer bots to heal their team mates more often
 
 --------------------------------------------------------------------------------
 Version 0.793
@@ -49,7 +55,7 @@ Updated by RoboCop
 
 Known bugs:-
 
->> Soldier bots tend to struggle for rocket jumping in certain areas that can block its way
+>> Soldier bots tend to struggle for rocket jumping in awkward areas that can block its way
 
 >> Sniper bots tend to TK when Friendly Fire is on, when interacting with their team's sentries and teleports
 
